# youdo_watcher

./: .gitignore  Dockerfile  config.ini.example  docker-compose.yaml  main.py  models.py  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py  schemas.py  watcher.py
