[project]
name = "youdo-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.28.2",
    "deepdiff>=9.1.0",
    "peewee>=4.0.5",
    "playwright>=1.60.0",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.1",
]
